# Devfusion

./: README.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
frontend/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BottomNav.tsx  Card.tsx  TopBar.tsx  VoiceButton.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AddEntry.tsx  Auth.tsx  Home.tsx  Insights.tsx  Learn.tsx  Loans.tsx  Onboarding.tsx
src/: App.css  en.json  hi.json  postcss.config.js
src/components/: LanguageSelection.tsx  langselection.tsx
src/contexts/: LanguageContext.jsx
src/others/: App.tsx  supabaseClient.ts  tailwind.config.js
src/translations/: hi.json  mr.json
tailwindcss4/: package-lock.json  package.json
